--- a/hot-air-balloon.html
+++ b/hot-air-balloon.html
@@ -11,11 +11,8 @@
   <!-- Header -->
   <header class="bg-white shadow p-4 sticky top-0 z-50">
     <div class="max-w-6xl mx-auto flex justify-between items-center">
-      <h1 class="text-2xl font-bold text-black">FLOWER VALLEY</h1>
       <nav class="space-x-6">
-        <a href="#" class="text-gray-700 hover:text-blue-600">Home</a>
-        <a href="#" class="text-gray-700 hover:text-blue-600">Properties</a>
-        <a href="#" class="text-gray-700 hover:text-blue-600">Contact</a>
+        <a href="index.html" class="text-gray-700 hover:text-blue-600">Home</a>
       </nav>
     </div>
   </header>
