--- a/private-events.html
+++ b/private-events.html
@@ -13,9 +13,7 @@
     <div class="max-w-6xl mx-auto flex justify-between items-center">
       <h1 class="text-2xl font-bold text-black">FLOWER VALLEY</h1>
       <nav class="space-x-6">
-        <a href="#" class="text-gray-700 hover:text-blue-600">Home</a>
-        <a href="#" class="text-gray-700 hover:text-blue-600">Properties</a>
-        <a href="#" class="text-gray-700 hover:text-blue-600">Contact</a>
+        <a href="index.html" class="text-gray-700 hover:text-blue-600">Home</a>
       </nav>
     </div>
   </header>
