--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Napa Valley Real Estate</title>
+  <title>FLOWER VALLEY</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .faq-answer { display: none; }
@@ -15,21 +15,21 @@
   <!-- Navbar -->
   <nav class="fixed w-full bg-white bg-opacity-70 backdrop-blur-md shadow-md z-50">
     <div class="max-w-7xl mx-auto flex items-center  p-4">
-      <h1 class="text-xl font-bold text-center">FLOWER VELLY</h1>
+      <h1 class="text-xl font-bold text-center">FLOWER valley</h1>
     </div>
   </nav>
 
   <!-- Hero Section -->
   <section id="hero" class="h-screen bg-cover bg-center flex items-center justify-center text-white" style="background-image:url('https://www.centralpark-flowervalley.co.in/cerisesuites/images/cerise-suites.jpg');">
     <div class="bg-black bg-opacity-50 p-10 rounded-xl text-center">
-      <h2 class="text-4xl md:text-6xl font-bold">Central Park Flower Velly</h2>
+      <h2 class="text-4xl md:text-6xl font-bold">Central Park Flower valley</h2>
       <p class="mt-4 text-lg">Experience unmatched beauty & lifestyle</p>
     </div>
   </section>
 
   <!-- Local Expertise -->
   <section id="expertise" class="max-w-6xl mx-auto py-16 px-4 text-center">
-    <h2 class="text-3xl font-bold mb-6">Flower Velly</h2>
+    <h2 class="text-3xl font-bold mb-6">Flower valley</h2>
     <p class="text-gray-600">Central Park Flower Valley is a luxury real estate township in Sector 32-33, Sohna, Gurgaon, known for its 500-acre expanse with abundant green spaces, including a large central park featuring the Flora Fountain. The township offers a variety of premium residences, extensive sports facilities, a large clubhouse, an organic farm, and a Kids Aqua & Terra Park, along with world-class hospitality and wellness amenities designed for a holistic and luxurious lifestyle.</p>
   </section>
 
@@ -87,7 +87,7 @@
   </div>
   <div class="bg-white rounded-xl shadow p-4">
     <img src="https://www.centralpark.in/images/thheeeseconds.jpg" class="rounded-xl mb-4" alt="Estate 3">
-    <h3 class="font-bold text-lg">Restro of flower Velly</h3>
+    <h3 class="font-bold text-lg">Restro of flower valley</h3>
     <p class="text-gray-600">Injoying Food With Nature</p>
     <p class="text-gray-800 font-semibold mt-2">Fell The Nature</p>
   </div>
@@ -104,7 +104,7 @@
   <!-- Napa Scrollable Cards -->
   <section class="py-16 px-4 bg-gray-50">
     <div class="max-w-6xl mx-auto">
-      <h2 class="text-3xl font-bold mb-6 text-center">FLOWER VELLY APARTMENTS</h2>
+      <h2 class="text-3xl font-bold mb-6 text-center">FLOWER valley APARTMENTS</h2>
       <div class="flex gap-6 overflow-x-auto pb-4">
   <a href="vineyard-tour.html" class="min-w-[350px] bg-white rounded-xl shadow p-4">
     <img src="https://www.gurgaonapartments.in/admin/upload/project/1647934754-central-park-plots-banner.webp" class="rounded-xl mb-2" alt="Vineyard Tour">
